WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179732
Log media readyState and networkState as strings
https://bugs.webkit.org/show_bug.cgi?id=179732
Summary
Log media readyState and networkState as strings
Eric Carlson
Reported
2017-11-15 10:15:29 PST
Log states as readable strings instead of as integers.
Attachments
Proposed patch
(13.85 KB, patch)
2017-11-15 11:26 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Patch for landing.
(13.85 KB, patch)
2017-11-15 14:22 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2017-11-15 11:26:35 PST
Created
attachment 327000
[details]
Proposed patch
Radar WebKit Bug Importer
Comment 2
2017-11-15 11:27:25 PST
<
rdar://problem/35565687
>
Build Bot
Comment 3
2017-11-15 13:30:53 PST
Attachment 327000
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/MediaPlayer.cpp:1525: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/platform/graphics/MediaPlayer.cpp:1545: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/html/HTMLMediaElement.cpp:266: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/html/HTMLMediaElement.cpp:283: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 4 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 4
2017-11-15 13:33:16 PST
Comment on
attachment 327000
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=327000&action=review
> Source/WebCore/html/HTMLMediaElement.cpp:2555 > + ALWAYS_LOG(LOGIDENTIFIER, "AUTOPLAY BLOCKED, USER GESTURE REQUIRED");
IIANM, we will have twice the same message here and above. Would it be possible to disambiguate this with something like Autoplay blocked in future data state, User gesture required? Also I am not sure we should uppercase the message, or is it to attract the eye?
Eric Carlson
Comment 5
2017-11-15 14:17:39 PST
(In reply to youenn fablet from
comment #4
)
> Comment on
attachment 327000
[details]
> Proposed patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=327000&action=review
> > > Source/WebCore/html/HTMLMediaElement.cpp:2555 > > + ALWAYS_LOG(LOGIDENTIFIER, "AUTOPLAY BLOCKED, USER GESTURE REQUIRED"); > > IIANM, we will have twice the same message here and above.
No, the first happens when readyState is HAVE_ENOUGH_DATA, the second when it is HAVE_FUTURE_DATA.
> Would it be possible to disambiguate this with something like Autoplay > blocked in future data state, User gesture required? > Also I am not sure we should uppercase the message, or is it to attract the > eye?
Yes, I put it upper case to make it more visible in the log. I suppose it isn't necessary, I will change back before landing.
Eric Carlson
Comment 6
2017-11-15 14:22:03 PST
Created
attachment 327025
[details]
Patch for landing.
WebKit Commit Bot
Comment 7
2017-11-15 15:25:38 PST
Comment on
attachment 327025
[details]
Patch for landing. Clearing flags on attachment: 327025 Committed
r224904
: <
https://trac.webkit.org/changeset/224904
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug