Log media readyState and networkState as strings https://bugs.webkit.org/show_bug.cgi?id=179732

Reviewed by Youenn Fablet.

* html/HTMLMediaElement.cpp:
(WebCore::convertEnumerationToString):
(WebCore::HTMLMediaElement::scheduleDelayedAction): Fix logic error.
(WebCore::HTMLMediaElement::pendingActionTimerFired): Fix incorrect log string.
(WebCore::HTMLMediaElement::setNetworkState): Don't cast to int for logging.
(WebCore::HTMLMediaElement::setReadyState): Ditto. Log when autoplay is blocked.

* html/HTMLMediaElementEnums.h:
(PAL::LogArgument<WebCore::HTMLMediaElementEnums::ReadyState>::toString): New.
(PAL::LogArgument<WebCore::HTMLMediaElementEnums::NetworkState>::toString): New.

* platform/graphics/MediaPlayer.cpp:
(WebCore::convertEnumerationToString):
* platform/graphics/MediaPlayerEnums.h:
(PAL::LogArgument<WebCore::MediaPlayerEnums::ReadyState>::toString):
(PAL::LogArgument<WebCore::MediaPlayerEnums::NetworkState>::toString):

* platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:
(WebCore::MediaPlayerPrivateAVFoundation::updateStates): Log strings.


Canonical link: https://commits.webkit.org/195781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224904 268f45cc-cd09-0410-ab3c-d52691b4dbfc