Source/WebCore/platform/graphics/MediaPlayerEnums.h
@@ -23,8 +23,9 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef MediaPlayerEnums_h
-#define MediaPlayerEnums_h
+#pragma once
+
+#include <wtf/text/WTFString.h>
 
 namespace WebCore {
 
@@ -43,6 +44,31 @@ public:
     typedef uint32_t VideoFullscreenMode;
 };
 
-}
+WTF::String convertEnumerationToString(MediaPlayerEnums::ReadyState);
+WTF::String convertEnumerationToString(MediaPlayerEnums::NetworkState);
 
-#endif
+} // namespace WebCore
+
+
+namespace PAL {
+
+template<typename Type>
+struct LogArgument;
+
+template <>
+struct LogArgument<WebCore::MediaPlayerEnums::ReadyState> {
+    static WTF::String toString(const WebCore::MediaPlayerEnums::ReadyState state)
+    {
+        return convertEnumerationToString(state);
+    }
+};
+
+template <>
+struct LogArgument<WebCore::MediaPlayerEnums::NetworkState> {
+    static WTF::String toString(const WebCore::MediaPlayerEnums::NetworkState state)
+    {
+        return convertEnumerationToString(state);
+    }
+};
+
+}; // namespace PAL
